Fixing more issues